<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="tiitle_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_login_user_name_hint">Enter your user name here</string>
    <string name="title_login_password_hint">Enter your password here</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">Yes</string>
    <string name="confirm_exit_no">No</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height</string>
    <string name="tilte_weight">Weight</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_timekeeping">Timekeeping</string>
    <string name="title_calloff">Call off</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_position">Position</string>
    <string name="title_quit">Quit Application</string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone" />
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_phone">Phone:</string>
    <string name="title_customer_password">Password:</string>
    <string name="title_username">User Name:</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_cate_id">Category ID:</string>
    <string name="title_product_description">Product Description:</string>
    <string name="title_product_image_id">Image ID:</string>
    <string name="title_add">Add</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_paymentmethod">Payment Method</string>
    <string name="title_order">Order</string>
    <string name="title_ProductId">Product ID</string>
    <string name="title_ProductName">Product Name</string>
    <string name="title_Price">Price</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_employeeName">Employee Name</string>
    <string name="title_CstomerName">Customer Name:</string>
    <string name="title_discount">Discount:</string>
    <string name="title_VAT">VAT:</string>
    <string name="title_totalvalue">Total Value:</string>
    <string name="title_contact">Contact</string>
    <string name="title_contact_name">"Contact Name: "</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_body">Body:</string>
    <string name="title_all">All</string>
    <string name="title_MultiThreading">Multi-Threading</string>
    <string name="title_handler_send_message">Handler Send Message</string>
    <string name="title_handler_post_message">Handler Post Message</string>
    <string name="title_asynctask">Asynctask</string>
    <string name="txt_draw">Draw</string>
    <string name="title_number_customer">Number of Customer:</string>
    <string name="title_load_customer">Load Customer</string>
</resources>