<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MultiThreadingCategoriesActivity">

    <Button
        android:id="@+id/button4"
        android:onClick="open_handler_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_handler_send_message" />

    <Button
        android:id="@+id/button5"
        android:onClick="open_handler_post_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_handler_post_message" />

    <Button
        android:id="@+id/button6"
        android:onClick="open_asynctask_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_asynctask" />
</LinearLayout>