<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendSmsActivity">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_phone_number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#F44336"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/title_body"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtBody"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="xin chao minh la con chuot ban phim man hinh mat kinh chai nước"
        android:textAlignment="gravity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSendSms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_send" />

        <ImageView
            android:id="@+id/imgSendSms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_send2" />
    </LinearLayout>

</LinearLayout>