<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeManagementMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployeeHealthCare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="open_employee_healthcare_activity"
                        app:srcCompat="@mipmap/ic_healthcare" />

                    <TextView
                        android:id="@+id/txtEmployeeHealthCare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F2E686"
                        android:onClick="open_employee_healthcare_activity"
                        android:text="@string/title_healthcare"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_salary" />

                    <TextView
                        android:id="@+id/txtEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F2E686"
                        android:text="@string/title_salary"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F2E686"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:src="@mipmap/ic_timekeeping" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_timekeeping"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_off" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F2E686"
                        android:text="@string/title_calloff"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_calendar" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F2E686"
                        android:text="@string/title_calendar"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_position" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F2E686"
                        android:text="@string/title_position"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_quitjob" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F2E686"
                        android:text="@string/title_quit"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>